computer_science/knowledge/devops/Kubernetes/kubernetes_in_action/chapter5/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  ports:
  - port: 80
    targetPort: 8443
